0.23 fix vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -64,15 +64,16 @@ main {
   text-align: center;
 }
 .ofSide {
-  transition-duration: 1s;
-  margin: 0 10px;
   min-width: 30px;
   min-height: 40px;
   border: 2px solid black;
+  vertical-align: middle;
   border-radius: 15%;
   font-size: 25px;
   font-weight: 700;
   cursor: pointer;
+  padding: auto;
+  line-height: 35px;
 }
 .caption {
   margin-top: auto;
